# uc-data-advisor

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  databricks.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
app/: app.py  app.yaml  requirements.txt
app/server/: advisor_config.py  config.py  llm.py  memory.py  tracing.py  uc_tools.py
app/server/agents/: __init__.py  base.py  discovery.py  metrics.py  orchestrator.py  qa.py  (+1 more)
app/static/: index.html
config/: advisor_config.example.yaml  advisor_config.yaml  my_config.yaml
config/.generated/: required_grants.sql
docs/: architecture.md
resources/: jobs.yml  schemas.yml
src/agent/: __init__.py  metadata_access.py  response_model.py  tools.py
src/notebooks/: create_enbridge_demo_data.py  create_metric_views.py  create_test_table.py  metadata_audit.py  refresh_metrics.py  seed_knowledge_base.py  sync_uc_metadata.py  verify_deployment.py
src/setup/: audit_metadata.py  config_loader.py  deploy.py  deploy_agent_endpoints.py  generate_benchmarks.py  generate_domain.py  generate_knowledge_base.py  generate_metric_views.py  generate_prompts.py  provision_infrastructure.py  register_models.py  run.py  teardown.py  templates.py
tasks/: audit_report.md  lessons.md  plan.md  todo.md
teams/: .env.example  README.md  app.py  config.py  databricks_client.py  deploy.py  requirements.txt  teams_config.example.yaml
tests/: __init__.py  benchmark.py  benchmark_notebook.py  test_metadata_access.py  test_response_model.py  test_tools.py
(+5 files in other folders)
